Fixes
- Add featured image
- Add p tag
- Add ellipsis if content overflows container.
- Added min-width so the containers will stack sideways.

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,24 @@ a {
     text-decoration: none;
 }
 
+.ellipsis {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.disp-block {
+    display: block;
+}
+
+img {
+    max-width: 100%;
+}
+
+.mw-100 {
+    max-width: 100%;
+}
+
 .mw-50 {
     max-width: 50px;
 }
@@ -47,7 +65,7 @@ a {
 }
 
 .w-third {
-    width: calc(100% * (1/3) - 30px);
+    width: calc(100% * (1 / 3) - 30px);
 }
 
 .pb-4 {
@@ -112,6 +130,9 @@ a {
 
 .mh-200 {
     min-height: 200px;
+}
+.minw-200 {
+    min-width: 200px;
 }
 
 .row-wrap {
